--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ These are basic examples of using the included functions:
 library(triangulr)
 ```
 
-Using the density function, `dtri`.
+Using the density function, [`dtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
 ```{r example_dtri}
 x <- c(0.1, 0.5, 0.9)
@@ -64,7 +64,7 @@ dtri(x, min = 0, max = 1, mode = 0.5)
 dtri(x, min  = 0, max  = rep.int(1, 3), mode = 0.5)
 ```
 
-Using the distribution function, `ptri`.
+Using the distribution function, [`ptri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
 ```{r example_ptri}
 q <- c(0.1, 0.5, 0.9)
@@ -78,23 +78,23 @@ ptri(q, log_p = TRUE)
 log(ptri(q, log_p = FALSE))
 ```
 
-Using the quantile function, `qtri`.
+Using the quantile function, [`qtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
-```{r}
+```{r example_qtri}
 p <- c(0.1, 0.5, 0.9)
 
-ptri(1 - p, lower_tail = FALSE)
+qtri(1 - p, lower_tail = FALSE)
 
-ptri(p, lower_tail = TRUE)
+qtri(p, lower_tail = TRUE)
 
 qtri(log(p), log_p = TRUE)
 
 qtri(p, log_p = FALSE)
 ```
 
-Using the random variate generator, `rtri`.
+Using the random variate generator, [`rtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
-```{r}
+```{r example_rtri}
 set.seed(1)
 n <- 3
 
@@ -103,9 +103,9 @@ rtri(n, min = 0, max = 1, mode = 0.5)
 rtri(n, min  = 0, max  = rep.int(1, 3), 0.5)
 ```
 
-Using the moment generating function, `mgtri`.
+Using the moment generating function, [`mgtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
-```{r}
+```{r example_mgtri}
 t <- c(1, 2, 3)
 
 mgtri(t, min = 0, max = 1, mode = 0.5)
@@ -113,9 +113,9 @@ mgtri(t, min = 0, max = 1, mode = 0.5)
 mgtri(t, min = rep.int(0, 3), max = 1, mode = 0.5)
 ```
 
-Using the characteristic function, `ctri`.
+Using the characteristic function, [`ctri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
-```{r}
+```{r example_ctri}
 t <- c(1, 2, 3)
 
 ctri(t, min = 0, max = 1, mode = 0.5)
@@ -123,9 +123,9 @@ ctri(t, min = 0, max = 1, mode = 0.5)
 ctri(t, min = rep.int(0, 3), max = 1, mode = 0.5)
 ```
 
-Using the expected shortfall function, `estri`.
+Using the expected shortfall function, [`estri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
-```{r}
+```{r example_estri}
 p <- c(0.1, 0.5, 0.9)
 
 estri(p, min = 0, max = 1, mode = 0.5)
