--- a/README.Rmd
+++ b/README.Rmd
@@ -32,14 +32,13 @@ function, and expected shortfall function for the triangular distribution.
 
 ## Installation
 
-<!-- You can install the released version of triangulr from [CRAN](https://CRAN.R-project.org) with: -->
+You can install the released version of `triangulr` from [CRAN](https://CRAN.R-project.org) with:
 
-<!-- ``` r -->
-<!-- install.packages("triangulr") -->
-<!-- ``` -->
+``` r
+install.packages("triangulr")
+```
 
-<!-- And the development version from [GitHub](https://github.com/) with: -->
-You can install the development version from [GitHub](https://github.com/) with:
+And the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -101,6 +100,10 @@ n <- 3
 rtri(n, min = 0, max = 1, mode = 0.5)
 
 rtri(n, min  = 0, max  = rep.int(1, 3), 0.5)
+
+# Using dqrng::dqrunif()
+dqrng::dqset.seed(1)
+rtri(n, min  = 0, max  = rep.int(1, 3), 0.5, dqrng = TRUE)
 ```
 
 Using the moment generating function, [`mgtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
