--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 [![Codecov](https://codecov.io/gh/irkaal/triangulr/branch/master/graph/badge.svg)](https://codecov.io/gh/irkaal/triangulr?branch=master)
 [![CRAN](http://www.r-pkg.org/badges/version/triangulr)](https://cran.r-project.org/package=triangulr)
 [![Downloads](http://cranlogs.r-pkg.org/badges/triangulr)](https://cran.r-project.org/package=triangulr)
+[![Downloads Overall](http://cranlogs.r-pkg.org/badges/grand-total/triangulr)](https://cran.r-project.org/package=triangulr)
 [![Lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
 
 
@@ -60,7 +61,10 @@ x <- c(0.1, 0.5, 0.9)
 
 dtri(x, min = 0, max = 1, mode = 0.5)
 
-dtri(x, min  = 0, max  = rep.int(1, 3), mode = 0.5)
+dtri(x,
+     min = rep.int(0, 3),
+     max = 1,
+     mode = 0.5)
 ```
 
 Using the distribution function, [`ptri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
@@ -94,16 +98,21 @@ qtri(p, log_p = FALSE)
 Using the random variate generator, [`rtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
 
 ```{r example_rtri}
-set.seed(1)
 n <- 3
 
+set.seed(1)
 rtri(n, min = 0, max = 1, mode = 0.5)
 
-rtri(n, min  = 0, max  = rep.int(1, 3), 0.5)
+set.seed(1)
+rtri(n, min = rep.int(0, 3), max = 1, 0.5)
 
-# Using dqrng::dqrunif()
-dqrng::dqset.seed(1)
-rtri(n, min  = 0, max  = rep.int(1, 3), 0.5, dqrng = TRUE)
+library(dqrng)
+dqset.seed(1)
+rtri(n,
+     min = rep.int(0, 3),
+     max = 1,
+     0.5,
+     dqrng = TRUE)
 ```
 
 Using the moment generating function, [`mgtri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
@@ -113,7 +122,10 @@ t <- c(1, 2, 3)
 
 mgtri(t, min = 0, max = 1, mode = 0.5)
 
-mgtri(t, min = rep.int(0, 3), max = 1, mode = 0.5)
+mgtri(t,
+      min = rep.int(0, 3),
+      max = 1,
+      mode = 0.5)
 ```
 
 Using the characteristic function, [`ctri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
@@ -123,7 +135,10 @@ t <- c(1, 2, 3)
 
 ctri(t, min = 0, max = 1, mode = 0.5)
 
-ctri(t, min = rep.int(0, 3), max = 1, mode = 0.5)
+ctri(t,
+     min = rep.int(0, 3),
+     max = 1,
+     mode = 0.5)
 ```
 
 Using the expected shortfall function, [`estri()`](https://irkaal.github.io/triangulr/reference/Triangular.html).
@@ -133,5 +148,8 @@ p <- c(0.1, 0.5, 0.9)
 
 estri(p, min = 0, max = 1, mode = 0.5)
 
-estri(p, min = rep.int(0, 3), max = 1, mode = 0.5)
+estri(p,
+      min = rep.int(0, 3),
+      max = 1,
+      mode = 0.5)
 ```
